# zappy

./: .gitignore  Cargo.toml  README.md  main.txt
UML/: client_class_UML.excalidraw  client_exec_flow_UML.excalidraw  zappy_server_UML_class.excalidraw  zappy_server_UML_exec_flow.excalidraw  zappy_server_UML_exec_flow_V2.excalidraw
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/args/: all.html  index.html
doc/args/args/: index.html  sidebar-items.js  struct.Args.html  struct.ParsingError.html
doc/implementors/core/error/: trait.Error.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/src/args/: args.rs.html
server/: Cargo.toml  zappy_server_UML_class.excalidraw
server/src/: args.rs  cell.rs  egg.rs  gamer.rs  main.rs  player.rs  ressources.rs  teams.rs
src/client/: action.rs  cell.rs  command.rs  main.rs  player.rs  template
src/server/: action.rs  args.rs  cell.rs  egg.rs  game_utils.rs  gamecontrol.rs  init.rs  main.rs  mod.rs  paket_crafter.rs  player.rs  ressources.rs  stream_utils.rs  teams.rs  utils.rs  zappy.rs
src/server_gfx/: Ressource.rs  button.rs  dispatch.rs  do_action.rs  env.rs  main.rs  main2.rs  map.rs  network.rs  packet.txt  parser.rs  sprite_player.rs  tmp_main.rs
src/server_gfx/draft/: main2.rs
test/: arsenal.txt  arsenal2.txt  avance.txt  chelsea.txt  chelsea1.txt  command.txt  must_do_server_gfx.txt  output_parsing.txt  runCli.sh  script_launch.sh  server.py  simple.txt
(+2 files in other folders)
