[package]
name = "zappy_42"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
crossbeam-channel = "0.5.10"

[[bin]]
name = "server"
path = "src/server/main.rs"


[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server_gfx"
path = "src/server_gfx/main.rs"
